# NOTE:
# 1. for display continuity sake please use 2 spaces instead of tabs
# 2. make sure that lines break at 80 chars for constricted display situations
#<-------------------------------- 80 chars ---------------------------------->#

2017-08-11 Nicolas Ribot <nicolas.ribot@gmail.com>
  * Spatial Index support for SQLite/Spatialte datasources: quotes identifiers
    when generating SQL queries

2017-08-11 ede
  * PLUS: update to latest sqlite-jdbc-3.20.0.jar

2017-08-10 Nicolas Ribot <nicolas.ribot@gmail.com>
  * Spatial Index support for SQLite/Spatialte datasources: wrong test for 
    GeoPackage spatial query bbox overlaping

2017-08-10 Nicolas Ribot <nicolas.ribot@gmail.com>
  * Spatial Index support for SQLite/Spatialte datasources: checks if geometry
    columns are indexed and builds custom SQL queries to use index according to
    detected SQLite flavors

2017-08-05 mmichaud <m.michael.michaud@orange.fr>
  * Improvement from ioan to honor IncrementalAngle constraint even on the
    first segment

2017-07-29 mmichaud <m.michael.michaud@orange.fr>
  * BlendLineStringsPlugIn : improve quality, performance and make it undoable
  * Deactivate ReplaceValuePlugIn (use AutoAssignAttributePlugIn instead)

2017-07-27 mmichaud <m.michael.michaud@orange.fr>
  * AutoAssignAttributePlugIn : inverse options order (simple to more complex)
  * Deprecate ReplaceValuePlugIn (redundant with the previous one, not undoable)

2017-07-26 mmichaud <m.michael.michaud@orange.fr>
  * AutoAssignAttributePlugIn : accept boolean and long as target attributes

2017-07-18 Nicolas Ribot <nicolas.ribot@gmail.com>
  * Network Properties translation files missing from previous commit

2017-06-29 Nicolas Ribot <nicolas.ribot@gmail.com>
  * Corrected properties files after bad unicode conversions.

2017-06-29 Nicolas Ribot <nicolas.ribot@gmail.com>
  * New Network Properties options: connection and read timeouts are now 
    configurable in the Network Properties options' tab.